--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "firebase": "^8.6.3",
-    "node-sass": "^5.0.0",
+    "firebase": "^9.8.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
